# examples_pcl

./: LICENSE  README.md
01_tutorial/: pcd_write.cpp
02_tutorial/src/: main.cpp  (+3 more)
03_3D_features/: .cproject  .project  3d_features.cpp  3d_features.hpp  CMakeLists.txt  check_input.cpp
03_3D_features/Debug/: makefile  objects.mk  subdir.mk
03_3D_features/bluid/: CMakeCache.txt  Makefile  cmake_install.cmake
03_3D_features/datasets/: cube.ply
04_integral_images/: CMakeLists.txt  integral_images  integral_images.cpp
05_point_feature_histograms/: CMakeLists.txt  pfh.cpp
06_NARF_features/: narf_feature_extraction.cpp
07_openni_grabber/: CMakeLists.txt  openni_viewer_simple.cpp
08_kinect_features/: CMakeLists.txt  kinect_features.cpp
10_index/: CMakeLists.txt  main.cpp
11_normals/: CMakeLists.txt  main.cpp
12_changes_detection/: CMakeLists.txt  main.cpp
13_outlier_removal/: CMakeLists.txt  main.cpp
14_statistical_outlier_removal/: CMakeLists.txt  main.cpp
15_surface_smoothing/: CMakeLists.txt  main.cpp
16_iterative_closest_point/: CMakeLists.txt  main.cpp
17_model_fitting/: CMakeLists.txt  main.cpp
18_projecting_points/: CMakeLists.txt  main.cpp
19_segmentation_euclidean/: CMakeLists.txt  main.cpp
20_segmentation_conditional_euclidean/: CMakeLists.txt  main.cpp
21_segmentation_region_growing/: CMakeLists.txt  main.cpp
22_segmentation_color_based/: CMakeLists.txt  main.cpp
23_segmentation_min_cut/: CMakeLists.txt  main.cpp
24_segmentation_ransac/: CMakeLists.txt~  main.cpp  main.cpp~
25_segmentation_ransac_cylinder/: CMakeLists.txt  main.cpp
26_segmentation_concave_hull/: CMakeLists.txt  main.cpp
27_segmentation_convex_hull/: main.cpp
28_reconstruction_triangulation/: CMakeLists.txt  main.cpp
29_descriptors_PFH/: CMakeLists.txt  main.cpp
30_descriptors_FPFH/: CMakeLists.txt  main.cpp
31_descriptors_3dsc/: CMakeLists.txt  main.cpp
32_descriptors_usc/: CMakeLists.txt  main.cpp
33_descriptors_shot/: CMakeLists.txt  main.cpp
34_descriptors_spin/: CMakeLists.txt  main.cpp
35_descriptors_rift/: CMakeLists.txt  main.cpp
36_descriptors_NARF_spherical/: CMakeLists.txt  main.cpp
37_descriptors_NARF_planar/: CMakeLists.txt  main.cpp
38_descriptors_NARF_borders/: CMakeLists.txt  main.cpp
pcl_visualization/: CMakeLists.txt  point_cloud_visualizer.cpp
pcl_visualization/datasets/: 3d_c001.ply  3d_c002.ply  3d_c003.ply  3d_c004.ply
(+40 files in other folders)
